optimize admin page
